esm -> cjs only + browser compat

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@ndml/version-api",
   "version": "1.0.0",
   "description": "Minecraft version api impl for launcher",
-  "main": "lib/index.cjs",
-  "module": "lib/index.mjs",
+  "main": "lib/index.js",
   "author": "LIMPIX31",
   "license": "MIT",
   "types": "./lib/types/index.d.ts",
@@ -19,20 +18,13 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build:script": "esbuild index.ts --bundle --minify --platform=node --external:./node_modules/*",
-    "build:cjs": "yarn build:script --format=cjs --outfile=./lib/index.cjs",
-    "build:esm": "yarn build:script --format=esm --outfile=./lib/index.mjs",
-    "build": "tsc && yarn build:cjs && yarn build:esm",
+    "build": "tsc && esbuild index.ts --bundle --minify --external:./node_modules/* --format=cjs --outfile=./lib/index.js",
     "prepare": "yarn build",
     "version": "yarn format && git add -A",
     "postversion": "git push && git push --tags",
     "format": "prettier --write \"*.ts\""
   },
-  "exports": {
-    "require": "./lib/index.cjs",
-    "import": "./lib/index.mjs",
-    "default": "./lib/index.cjs"
-  },
+  "exports": "./lib/index.js",
   "devDependencies": {
     "@types/node": "^17.0.25",
     "esbuild": "^0.14.38",
