--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc && esbuild index.ts --bundle --minify --external:./node_modules/* --format=cjs --outfile=./lib/index.js",
+    "build": "tsc",
     "prepare": "yarn build",
     "version": "yarn format && git add -A",
     "postversion": "git push && git push --tags",
@@ -26,15 +26,15 @@
   },
   "exports": "./lib/index.js",
   "devDependencies": {
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.31",
     "esbuild": "^0.14.38",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "yarn": "^1.22.18"
   },
   "dependencies": {
-    "@ndml/types": "^1.0.1",
-    "axios": "^0.26.1",
+    "@ndml/types": "^1.0.5",
+    "axios": "^0.27.2",
     "fast-xml-parser": "^4.0.7"
   }
 }
